--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="col left">
         <div class="img-box">
             <figure>
-                <img src="Responsive.PNG" alt="responsive" class="imgspecial">
+                <img src="images/responsive.PNG" alt="responsive" class="imgspecial">
                 <figcaption><a href="https://codepen.io/mojzesz/full/XZwrqB/">Resume</a></figcaption>
             </figure>
         </div>
@@ -77,7 +77,7 @@
     <div class="col middle">
         <div class="img-box">
             <figure>
-                <img src="Portal.PNG" alt="portal" class="imgspecial">
+                <img src="images/portal.PNG" alt="portal" class="imgspecial">
                 <figcaption><a href="https://codepen.io/mojzesz/full/eyxPeG/">Portal</a></figcaption>
             </figure>
         </div>
@@ -93,7 +93,7 @@
     <div class="col right">
         <div class="img-box">
             <figure>
-                <img src="card.PNG" alt="Card" class="imgspecial">
+                <img src="images/card.PNG" alt="Card" class="imgspecial">
                 <figcaption><a href="https://codepen.io/mojzesz/full/Leqzvv/">Card</a></figcaption>
             </figure>
         </div>
