--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <head>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,6 +11,7 @@
     <meta charset="utf-8">
     <base target="_blank">
     <script src="scripts.js"></script>
+    <title>Portfolio</title>
 </head>
 
 <!-- HEADER -->
