--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Language" content="pl">
     <meta charset="utf-8">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <base target="_blank">
-    <script src="scripts.js"></script>
     <title>Portfolio</title>
 </head>
 
@@ -125,45 +123,6 @@
         <div id="caption"></div>
     </div>
 </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script>
-
-// OPEN/CLOSE A SIDEBAR
-
-$('.toggle').click(function () {
-    $('.sidebar').toggleClass('left1');
-    $(this).toggleClass('left2');
-});
-
-// GET THE MODAL
-
-var modal = document.getElementById('myModal');
-
-// GET THE <span> ELEMENT THAT CLOSES THE MODAL
-
-var span = document.getElementsByClassName("close")[0];
-
-// WHEN THE USER CLICKS ON <span> (x), CLOSE THE MODAL
-
-span.onclick = function () { 
-    modal.style.display = "none";
-}
-
-// GET ALL IMAGES AND INSERT THE CLICKED IMAGE INSIDE THE MODAL
-// GET THE CONTENT OF THE IMAGE DESCRIPTION AND INSERT IT INSIDE THE MODAL IMAGE CAPTION
-
-var images = document.getElementsByClassName('imgspecial');
-var modalImg = document.getElementById("img01");
-var captionText = document.getElementById("caption");
-var i;
-for (i = 0; i < images.length; i++) {
-    images[i].onclick = function () {
-        modal.style.display = "block";
-        modalImg.src = this.src;
-        modalImg.alt = this.alt;
-        captionText.innerHTML = this.nextElementSibling.innerHTML;
-    }
-}
-    </script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
